<resources>
    <string name="app_name">MiProyecto</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_delete">Eliminar</string>
    <string name="btn_agregar"></string>
    <string name="btn_update">Actualizar</string>
    <string name="btn_add">Agregar producto</string>
    <string name="product_name">Nombre Producto</string>
    <string name="product_price">Precio</string>
    <string name="product_stock">Unidades Disponibles</string>
    <string name="product_category">Categoria</string>
    <string name="product_description">Descripcion</string>
    <string name="pick_image">Seleccionar imagen</string>
    <string name="user_preference_key">preferences</string>

</resources>