<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".AddProductActivity">

    <ImageView
        android:id="@+id/ivProduct"
        android:layout_width="281dp"
        android:layout_height="148dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        tools:srcCompat="@drawable/vinos" />

    <Button
        android:id="@+id/btnPickImage"
        android:layout_width="230dp"
        android:layout_height="55dp"
        android:background="@drawable/btn_style"
        android:onClick="pickImage"
        android:text="@string/pick_image"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProduct"
        app:layout_constraintVertical_bias="0.037" />

    <ScrollView
        android:layout_width="346dp"
        android:layout_height="457dp"
        android:layout_marginTop="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPickImage"
        app:layout_constraintVertical_bias="0.519">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etProductName"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/product_name"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/product_price"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/etStock"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/product_stock"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/etCategory"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/product_category"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/product_description"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnproduct"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_style"
                android:onClick="uploadImage"
                android:text="@string/btn_add" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>